test/libsolidity/syntaxTests/types/mapping/error_parameter.sol
error E (mapping (uint => uint));
// ----
// TypeError 3448: (9-31): Type containing a (nested) mapping is not allowed as error parameter type.
